# vodokanal

./: Dockerfile  README.md  app.py  dvc.yaml  home.html  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci_pipline.yml  pipline.yml  pylint.yml  run_flake8.yml
artifacts/: data.csv  preprocessor.pkl  test.csv  train.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/processed/: .gitignore
data/raw/: .gitignore  data.csv  raw.xlsx.dvc  test.csv  train.csv
docker/: .env_example  docker-compose.yml
docs/: load_dataset.yaml  ТЗ Цифровой подсказчик реагентной обработки воды.docx
models/: .gitignore  model.pkl  preprocessor.pkl  preprocessor.pkl.dvc
notebook/: data_new_v1.xlsx  water_quality_classifier_.ipynb
notebook/catboost_info/: catboost_training.json  (+2 more)
notebooks/: water_quality_classifier.ipynb
src/: exceptions.py  pyproject.toml  setup.cfg  utils.py
src/app/: app.py
src/app/templates/: home.html
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py  optimizer.py
src/data/: data_ingestion.py  data_transformation.py
src/fastapi_app/: Dockerfile
src/models/: model_trainer.py  optimizer.py  predict_pipeline.py
src/pipeline/: predict_pipeline.py
src/service/: Dockerfile
src/vodokanal/: exceptions.py  utils.py
src/vodokanal/data/: data_ingestion.py  data_normalization.py  data_transformation.py  excel_to_csv.py  load_dataset.py  transform_dataset.py
src/vodokanal/models/: __init__.py  constants.py  create_model.py  model_trainer.py  optim.py  optimizer.py  predict_pipeline.py  service.py
templates/: home.html
tests/: test_plug.py
water_full.egg-info/: PKG-INFO  SOURCES.txt
(+1 files in other folders)
