[metadata]
name = vodokanal
version = 0.0.1

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.7
install_requires =
    pandas~=1.3.5
    numpy~=1.21.6
    seaborn~=0.12.2
    catboost~=1.2
    scikit-learn~=1.0.2
    matplotlib~=3.5.3
    openpyxl~=3.1.2
    dill~=0.3.6
    flask~=2.2.5


[options.extras_require]
dev =
    pytest~=6.2.2
    pytest-cov~=2.11.1
    isort~=5.11.5
    toml~=0.10.2
    importlib-metadata~=4.2.0
    black~=23.3.0
    pylint~=2.17.3