[metadata]
name = vodokanal
version = 0.0.1

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.9
install_requires =
    pandas~=2.0.1
    numpy~=1.24.3
    seaborn~=0.12.2
    catboost~=1.2
    scikit-learn~=1.2.2
    matplotlib~=3.7.1
    openpyxl~=3.1.2
    dill~=0.3.6
    flask~=2.3.2
    mlflow~=2.3.2
    boto3~=1.26.142

[options.extras_require]
dev =
    pytest~=6.2.2
    pytest-cov~=2.11.1
    isort~=5.11.5
    toml~=0.10.2
    importlib-metadata~=4.2.0
    black~=23.3.0
    pylint~=2.17.3